--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,137 @@
+/*
+    CSS RESET 
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block
+}
+
+body {
+    line-height: 1
+}
+
+ol,
+ul {
+    list-style: none
+}
+
+blockquote,
+q {
+    quotes: none
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0
+}
+
 html,
 body {
     margin: 0;
@@ -14,11 +148,6 @@ body {
 .selectedDate {
     margin: 0 1rem 0 0;
 }
-
-
-/* img {
-    height: 219px;
-} */
 
 #DrpDwn {
     text-align: center;
@@ -38,46 +167,6 @@ header {
 header img {
     min-width: 100%;
 }
-
-
-/* table {
-    width: 100%;
-    margin: 2rem auto;
-}
-
-thead tr th {
-    background: #efefef;
-}
-
-th {
-    text-align: left;
-}
-
-tr:nth-child(even) {
-    background: #f7f7f7;
-}
-
-tr:nth-child(odd) {
-    background: #fff;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-tr {
-    border-bottom: 1px solid #d1d1d1;
-}
-
-th,
-td {
-    text-align: left;
-    padding: 1rem 0 1rem .8rem;
-}
-
-td a {
-    color: #333333;
-} */
 
 #details ul {
     -webkit-column-count: 3;
@@ -103,7 +192,6 @@ td a {
 }
 
 h2 {
-    /* border-bottom: solid 1px #eee; */
     display: block;
     padding: 1rem 0;
     font-size: 1.5rem;
